# enee467pt2

./: .gitignore  README.md
.devcontainer/: Dockerfile  README.md  container-setup.sh  devcontainer.json  setup.sh
.devcontainer/467-amd-gpu/: devcontainer.json
.devcontainer/467-base/: devcontainer.json
.devcontainer/467-nvidia-gpu/: devcontainer.json
.devcontainer/ral-lab/: README.md  devcontainer.json  lab-container-setup.sh  ral-lab.Dockerfile
output/: poses-2024-10-30_17-46-20.csv  poses-2024-10-30_18-24-42.csv  poses-2024-10-30_18-25-44.csv  poses-2024-10-30_18-34-06.csv
output/lab7/: frame-2024-10-30_17-08-09.txt  frame-2024-10-30_17-08-09.yaml  frame-2024-10-30_17-17-41.txt  frame-2024-10-30_17-17-41.yaml  verification-2024-10-30_17-11-41.txt  verification-2024-10-30_17-19-14.txt
output/lab8/: poses-2024-11-06_18-35-40.csv  poses-2024-11-06_18-36-57.csv  poses-2024-11-06_18-38-37.csv  poses-2024-11-06_18-40-16.csv  poses-2024-11-06_19-27-13.csv  poses-2024-11-06_19-29-19.csv  poses-2024-11-13_17-28-40.csv  poses-2024-11-13_17-29-33.csv  poses-2024-11-13_17-31-28.csv  poses-2024-11-13_17-32-07.csv  poses-2024-11-13_17-37-48.csv  poses-2024-11-13_17-56-39.csv  poses-2024-11-13_17-57-21.csv  poses-2024-11-13_17-59-25.csv  poses-2024-11-13_18-18-37.csv  poses-2024-11-13_18-30-12.csv  poses-2024-11-13_18-30-45.csv  poses-2024-11-13_18-33-07.csv  poses-2024-11-13_18-38-19.csv  poses-2024-11-13_18-41-12.csv  poses-2024-11-13_18-41-52.csv  poses-2024-11-13_18-45-50.csv  poses-2024-11-13_19-44-17.csv  poses-2024-11-20_17-37-01.csv  poses-2024-11-20_17-54-13.csv  poses-2024-11-20_17-54-47.csv  poses-2024-11-20_17-55-35.csv  poses-2024-11-20_18-00-52.csv  poses-2024-11-20_18-05-25.csv  poses-2024-11-20_18-08-02.csv  poses-2024-11-20_18-10-19.csv  poses-2024-11-20_18-13-03.csv  poses-2024-11-20_18-15-33.csv  poses-2024-11-20_18-22-26.csv  poses-2024-11-20_18-52-40.csv  poses-2024-11-20_18-55-10.csv  poses-2024-11-20_19-17-35.csv  poses-2024-11-20_19-19-06.csv  poses-2024-11-20_19-21-51.csv  poses-2024-11-20_19-27-19.csv  (+6 more)
src/camera_calib_pkg/: CMakeLists.txt  README.md  package.xml
src/camera_calib_pkg/launch/: extrinsic_calibration.launch.py
src/lab7/: CMakeLists.txt  README.md  package.xml
src/lab7/config/: aruco_opencv_params.yaml  lab7.rviz
src/lab7/config/table-0/: camera_info.yaml  usb_cam_params.yaml
src/lab7/config/table-1/: camera_info.yaml  usb_cam_params.yaml
src/lab7/config/table-2/: camera_info.yaml  usb_cam_params.yaml
src/lab7/config/table-3/: camera_info.yaml  usb_cam_params.yaml
src/lab7/config/table-4/: camera_info.yaml  usb_cam_params.yaml
src/lab7/config/table-5/: camera_info.yaml  usb_cam_params.yaml
src/lab7/config/table-6/: camera_info.yaml  usb_cam_params.yaml
src/lab7/config/table-7/: camera_info.yaml  usb_cam_params.yaml
src/lab7/include/lab7/: command_interface.hpp  eef_pose_tracker.hpp  hand_eye_calib.hpp  ur3e_move_interface.hpp  ur3e_mover.hpp
src/lab7/launch/: calibrate_camera.launch.py  lab7.launch.py  lab7_gazebo.launch.py  lab7_real.launch.py  lab_space.launch.py
src/lab7/scripts/: update_camera_info.sh
src/lab7/src/: command_interface.cpp  eef_pose_tracker.cpp  hand_eye_calib.cpp  lab7.cpp  main.cpp  ur3e_move_interface.cpp  ur3e_mover.cpp  verify_calib.cpp
src/lab7/srv/: HandEyeCalib.srv
src/lab8/: CMakeLists.txt  README.md  compile_commands.json  package.xml
src/lab8/.cache/clangd/index/: aruco_tf.cpp.BFEE7FF42C34E64D.idx
src/lab8/include/: aruco_tf.hpp
src/lab8/include/lab8/: eef_pose_tracker.hpp  ur3e_move_interface.hpp
src/lab8/launch/: extrinsic_calibration.launch.py  lab8.launch.py  tf2_broad.launch.py  tf2_listen.launch.py
src/lab8/msg/: Detection.msg
src/lab8/src/: aruco_tf.cpp  eef_pose_tracker.cpp  examples.cpp  lab8.cpp  ur3e_move_interface.cpp
src/lab8/srv/: TrackRequest.srv
src/lab_description/: CMakeLists.txt  package.xml
src/lab_description/meshes/ral_table/: table_collision.dae
src/lab_description/meshes/table/: table_demo.dae  table_demo.stl
src/lab_description/urdf/: lab.urdf.xacro  table_macro.xacro  ur.urdf.xacro
src/lab_moveit_config/: CMakeLists.txt  package.xml
src/lab_moveit_config/config/: lab.srdf  lab.srdf.xacro  lab.urdf.xacro  ur_macro.srdf.xacro
src/lab_moveit_config/launch/: lab_moveit.launch.py
src/lab_moveit_config/srdf/: lab.srdf
src/lab_simulation_gazebo/: CMakeLists.txt  README.md  package.xml
src/lab_simulation_gazebo/launch/: lab_real_moveit.launch.py  lab_sim_control.launch.py  lab_sim_moveit.launch.py
